# signoz-mcp

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  ecosystem.config.js  pyproject.toml
signoz_mcp/: __init__.py  __main__.py  _client.py  observability.py  server.py
tests/: test_server.py
