[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "signoz-mcp"
version = "0.1.0"
description = "FastMCP server for SigNoz observability queries — read-only access to services, traces, logs, metrics, and alerts"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
keywords = ["mcp", "signoz", "observability", "traces", "logs", "metrics", "fastmcp"]
dependencies = [
    "fastmcp>=3.2.0,<4.0.0",
    "httpx>=0.27",
    "structlog>=24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "pytest-cov>=4.0",
    "ruff",
]

[project.scripts]
signoz-mcp = "signoz_mcp.server:main"

[tool.setuptools.packages.find]
include = ["signoz_mcp*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["B", "SIM"]

[tool.coverage.report]
fail_under = 80
show_missing = true
